Flat Button: fix for wrong color of ripple effect in dark theme
[Issue] https://github.com/Samsung/TAU/issues/1208
[Problem] The Ripple effect color is not consistent in Dark Mode
[Solution]
 - Background color for flat button with icon had deprecated color

--- a/src/css/profile/mobile/base.less
+++ b/src/css/profile/mobile/base.less
@@ -63,7 +63,7 @@
 @on-off-switch-off-track-background: transparent;
 @button-background-opacity: 6%;
 @button-background: fade(@_black, 0%);
-@button-flat-icon-background: #f5f5f5;
+@button-flat-icon-background: transparent;
 @button-background-contained: fade(@_black, @button-background-opacity);
 @button-text-font-size: 17 * @px_base;
 @button-contained-text-font-size: 17 * @px_base;
